--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,13 +7,14 @@ spring:
       enabled: true
   jpa:
     open-in-view: true
-    generate-ddl : true
+    generate-ddl: true
     show-sql: true
     hibernate:
       ddl-auto: update
-#      ddl-auto: validate #DB??? ?? JPA???? ??? ????? ??
     properties:
       hibernate:
-        format_sql: true #?? ??
+        format_sql: true
         show_sql: true
-
+        naming:
+          implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyJpaImpl
+          physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
