--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,10 @@ spring:
     init:
       mode: always
   datasource:
+#    url: jdbc:mariadb://proj-db-1:3306/test
+#    username: user
+#    password : 1234
+#    driver-class-name: org.mariadb.jdbc.Driver
     url: jdbc:h2:mem:testdb
     username: vin
   h2:
@@ -21,4 +25,5 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
-    #defer-datasource-initialization: true 
+#        dialect: org.hibernate.dialect.MariaDBDialect
+    defer-datasource-initialization: true
