--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,12 +5,12 @@ spring:
     init:
       mode: always
   datasource:
-#    url: jdbc:mariadb://proj-db-1:3306/test
-#    username: user
-#    password : 1234
-#    driver-class-name: org.mariadb.jdbc.Driver
-    url: jdbc:h2:mem:testdb
-    username: vin
+    url: jdbc:mariadb://docker-db-1:3306/test
+    username: user
+    password : 1234
+    driver-class-name: org.mariadb.jdbc.Driver
+#    url: jdbc:h2:mem:testdb
+#    username: vin
   h2:
     console:
       enabled: true
@@ -25,5 +25,5 @@ spring:
       hibernate:
         format_sql: true
         show_sql: true
-#        dialect: org.hibernate.dialect.MariaDBDialect
+        dialect: org.hibernate.dialect.MariaDBDialect
     defer-datasource-initialization: true
