--- a/Docker/configweb/Dockerfile
+++ b/Docker/configweb/Dockerfile
@@ -1,5 +1,5 @@
 FROM openjdk:17
-ARG JAR_FILE=build/libs/*.jar
+ARG JAR_FILE=/Docker/*.jar
 COPY ${JAR_FILE} app.jar
 ENTRYPOINT ["java", "-jar","app.jar"]
 ENV TZ Asia/Seoul
